@@ -3,6 +3,9 @@ J2J Component (http://wiki.jrudevels.org/J2J) Changelog:
 1.1.8:
     [add] Experemental MySQL support.
     [add] vCard replication
+    [add] Some command-line options
+
+    [chg] New configuration scheme
  
     [fix] jabber:iq:roster "from" attribute interpretation fix
     [fix] svn ps svn:executable \* https://svn.jrudevels.org/j2j/trunk/main.py; svn ps svn:ignore \*.pyc https://svn.jrudevels.org/j2j/trunk/
